[gd_scene load_steps=5 format=3 uid="uid://c7pc5qcbxfx81"]

[ext_resource type="Script" path="res://Flower.gd" id="1_ens48"]
[ext_resource type="Texture2D" uid="uid://c6bkghutyjkj0" path="res://Art/World/Flowers/AWP_FlowerWorld_LavenderBush.png" id="2_src0n"]
[ext_resource type="Texture2D" uid="uid://bmpdltriytcja" path="res://Art/World/Flowers/AWP_FlowerWorld_LavenderBush_GlowBorder.png" id="3_7om3p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owukc"]
size = Vector2(23, 16)

[node name="Flower" type="Area2D"]
z_index = 1
script = ExtResource("1_ens48")
PathGlowBorderLayer = NodePath("GlowBorderLayer")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_owukc")

[node name="FlowerSprite" type="Sprite2D" parent="."]
position = Vector2(0, -6)
texture = ExtResource("2_src0n")

[node name="GlowBorderLayer" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -6)
texture = ExtResource("3_7om3p")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
